# mcp-examples

./: .gitignore  COURSE_RESOURCES.md  README.md  mcp_client.py  old-README.md  pyproject.toml  tool_calling.ipynb
_extra_resources/: hard-coded-price.json
binance_mcp/: binance_mcp.py
binance_mcp_reference_implementation/: binance_mcp.py  binance_mcp_w_prompt.py  binance_mcp_w_resource.py  symbol_map.csv
langgraph/: price_graph.py
ref-docker-intro/: Dockerfile
ref-my-cloudflare-mcp-server-public/: package-lock.json  package.json  wrangler.jsonc
ref-my-cloudflare-mcp-server-public/src/: index.ts
ref-my-cloudflare-mcp-server-secure/: package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
ref-my-cloudflare-mcp-server-secure/src/: github-handler.ts  index.ts  utils.ts  workers-oauth-utils.ts
ref-simple-mcp-in-docker/: Dockerfile  binance-mcp.py  requirements.txt
ref_openai_mcp/: function_calling.py  mcp_with_openai_agent.py  mcp_with_responses_api.py
typescript_mcp/: README.md  package-lock.json  package.json  package.json.comments  tsconfig.json  tsconfig.json.comments
typescript_mcp/src/: .npmignore  binance_mcp.ts
